cluster/manifest/irsa-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name:  s3-reader
spec:
  serviceAccountName: s3-read-sa
  containers:
  - name: s3-reader-container
    image: amazon/aws-cli:latest
    command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
