cluster/manifest/ebs-svc.yaml
# ~/EksTerraformStudy/cluster/manifest/ebs-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: sesac-b2-ebs-svc
spec:
  ports:
    - port: 3306
  selector:
    app: ebs-deploy
  clusterIP: None  # DNS로 호출하기 위해 Headless Service로 생성
